--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
     <title>Switch</title>
 </head>
 <body>
-    <p>hello world</p>
+    <div class="container">
+        <header class="header">
+            <nav class="header__nav">
+                <ul class="header__list">
+                    <li class="header__item">
+                        <a href="#" class="header__link">Home</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">What we do?</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">Testimonial</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">Contact Us</a>
+                    </li>
+                </ul>
+                <div class="header__logo">Switch</div>
+                <form action="#" class="search">
+                    <input type="text" class="search__input" placeholder="Search...">
+                    <button class="search__button">
+                        <img src="img/magnifying-glass34.png" alt="Magnifying glass" class="search__icon">
+                    </button>
+                </form>
+            </nav>
+            <div class="header__content">
+                <h1 class="header-primary mb-md">Art Is Eternal Happiness</h1>
+                <a href="#" class="btn btn--lg">Work with us</a>
+                <a href="#" class="btn btn--grey">scroll down</a>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
