--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a href="#" class="header__link">Contact Us</a>
                     </li>
                 </ul>
-                <div class="header__logo">Switch</div>
+                <div class="logo"><a href="#" class="logo__link">Switch</a></div>
                 <form action="#" class="search">
                     <input type="text" class="search__input" placeholder="Search...">
                     <button class="search__button">
@@ -34,11 +34,48 @@
                 </form>
             </nav>
             <div class="header__content">
-                <h1 class="header-primary mb-md">Art Is Eternal Happiness</h1>
+                <h1 class="heading-primary mb-md">Art Is Eternal Happiness</h1>
                 <a href="#" class="btn btn--lg">Work with us</a>
                 <a href="#" class="btn btn--grey">scroll down</a>
             </div>
         </header>
+        <section class="section-about">
+            <h2 class="heading-secondary">
+                <span class="heading-secondary--main">What we do</span>
+                <span class="heading-secondary--sub">Lorem ipsum dolor sit amet. Proin gravida nibh vel velit auctor aliquet.</span>
+            </h2>
+            <div class="features">
+                <ul class="features__list">
+                    <li class="features__item">
+                        <h3 class="features__heading">Lorem ipsum</h3>
+                        <p class="features__description">
+                            This is Photoshop's version  of Lorem Ipsum. Proin gravida 
+                            nibh vel velit auctor aliquet. Aenean sollicitudin, lorem 
+                            quis bibendum auctor
+                        </p>
+                        <a href="#" class="btn btn--sm">Learn more</a>
+                    </li>
+                    <li class="features__item">
+                        <h3 class="features__heading">Lorem ipsum</h3>
+                        <p class="features__description">
+                            This is Photoshop's version  of Lorem Ipsum. Proin gravida 
+                            nibh vel velit auctor aliquet. Aenean sollicitudin, lorem 
+                            quis bibendum auctor
+                        </p>
+                        <a href="#" class="btn btn--sm">Learn more</a>
+                    </li>
+                    <li class="features__item">
+                        <h3 class="features__heading">Lorem ipsum</h3>
+                        <p class="features__description">
+                            This is Photoshop's version  of Lorem Ipsum. Proin gravida 
+                            nibh vel velit auctor aliquet. Aenean sollicitudin, lorem 
+                            quis bibendum auctor
+                        </p>
+                        <a href="#" class="btn btn--sm">Learn more</a>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </div>
 </body>
 </html>
