--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav class="header__nav">
                 <ul class="header__list">
                     <li class="header__item">
-                        <a href="#" class="header__link">Home</a>
+                        <a href="#" class="header__link header__link--active">Home</a>
                     </li>
                     <li class="header__item">
                         <a href="#" class="header__link">What we do?</a>
@@ -42,11 +42,14 @@
         <section class="section-about">
             <h2 class="heading-secondary">
                 <span class="heading-secondary--main">What we do</span>
-                <span class="heading-secondary--sub">Lorem ipsum dolor sit amet. Proin gravida nibh vel velit auctor aliquet.</span>
+                <span class="heading-secondary--sub mb-lg">Lorem ipsum dolor sit amet. Proin gravida nibh vel velit auctor aliquet.</span>
             </h2>
             <div class="features">
                 <ul class="features__list">
                     <li class="features__item">
+                        <div class="features__image">
+                            <img src="img/Forma-1.png" alt="Picture of feature one" width="84" height="71" class="features__img">
+                        </div>
                         <h3 class="features__heading">Lorem ipsum</h3>
                         <p class="features__description">
                             This is Photoshop's version  of Lorem Ipsum. Proin gravida 
@@ -56,6 +59,9 @@
                         <a href="#" class="btn btn--sm">Learn more</a>
                     </li>
                     <li class="features__item">
+                        <div class="features__image">
+                            <img src="img/Forma-2.png" alt="Picture of feature two" width="84" height="71" class="features__img">
+                        </div>
                         <h3 class="features__heading">Lorem ipsum</h3>
                         <p class="features__description">
                             This is Photoshop's version  of Lorem Ipsum. Proin gravida 
@@ -65,6 +71,9 @@
                         <a href="#" class="btn btn--sm">Learn more</a>
                     </li>
                     <li class="features__item">
+                        <div class="features__image">
+                            <img src="img/Forma-3.png" alt="Picture of feature three" width="84" height="71" class="features__img">
+                        </div>
                         <h3 class="features__heading">Lorem ipsum</h3>
                         <p class="features__description">
                             This is Photoshop's version  of Lorem Ipsum. Proin gravida 
@@ -74,6 +83,34 @@
                         <a href="#" class="btn btn--sm">Learn more</a>
                     </li>
                 </ul>
+            </div>
+        </section>
+        <section class="portfolio">
+            <h2 class="heading-secondary">
+                <span class="heading-secondary--main heading-secondary--green">Our latest work</span>
+                <span class="heading-secondary--sub heading-secondary--green mb-lg">Lorem ipsum dolor sit amet. Proin gravida nibh vel velit auctor aliquet.</span>
+            </h2>
+            <div class="portfolio__buttons mb-lg">
+                <button class="portfolio__btn portfolio__btn--photo portfolio__btn--active">Photography</button>
+                <button class="portfolio__btn portfolio__btn--design">Design</button>
+                <button class="portfolio__btn portfolio__btn--print">Print</button>
+            </div> 
+            <div class="gallery mb-md">
+                <div class="gallery__wrapper">
+                    <figure class="gallery__item"><img src="img/photo-1.jpg" alt="Photo 1" class="gallery__img"></figure>
+                    <figure class="gallery__item"><img src="img/photo-2.jpg" alt="Photo 2" class="gallery__img"></figure>
+                    <figure class="gallery__item"><img src="img/photo-3.jpg" alt="Photo 3" class="gallery__img"></figure>
+                    <figure class="gallery__item"><img src="img/photo-4.jpg" alt="Photo 4" class="gallery__img"></figure>
+                    <figure class="gallery__item"><img src="img/photo-5.jpg" alt="Photo 5" class="gallery__img"></figure>
+                    <figure class="gallery__item"><img src="img/photo-6.jpg" alt="Photo 6" class="gallery__img"></figure>
+                    <figure class="gallery__item"><img src="img/photo-7.jpg" alt="Photo 7" class="gallery__img"></figure>
+                    <figure class="gallery__item"><img src="img/photo-8.jpg" alt="Photo 8" class="gallery__img"></figure>
+                    <figure class="gallery__item"><img src="img/photo-9.jpg" alt="Photo 9" class="gallery__img"></figure>
+                    <figure class="gallery__item"><img src="img/photo-10.jpg" alt="Photo 10" class="gallery__img"></figure>
+                </div>
+            </div>
+            <div class="btn-wrapper">
+                <a href="#" class="btn btn--view-more">View more work</a>
             </div>
         </section>
     </div>
