--- a/index.html
+++ b/index.html
@@ -113,6 +113,27 @@
                 <a href="#" class="btn btn--view-more">View more work</a>
             </div>
         </section>
+        <section class="clients">
+            <h2 class="heading-secondary">
+                <span class="heading-secondary--main">Our happy client</span>
+                <span class="heading-secondary--sub mb-lg">Lorem ipsum dolor sit amet. Proin gravida nibh vel velit auctor aliquet.</span>
+            </h2>
+            <div class="clients-gallery mb-lg">
+                <div class="clients-gallery__wrapper">
+                    <figure class="clients-gallery__item"><img src="img/Googlelogo.png" alt="Photo 1" class="clients-gallery__img"></figure>
+                    <figure class="clients-gallery__item"><img src="img/Yahoo_Logo.png" alt="Photo 2" class="clients-gallery__img"></figure>
+                    <figure class="clients-gallery__item"><img src="img/MSFT_logo.png" alt="Photo 3" class="clients-gallery__img"></figure>
+                    <figure class="clients-gallery__item"><img src="img/Intel-logo.png" alt="Photo 4" class="clients-gallery__img"></figure>
+                    <figure class="clients-gallery__item"><img src="img/Cisco_logo.png" alt="Photo 1" class="clients-gallery__img"></figure>
+                    <figure class="clients-gallery__item"><img src="img/Cisc_logo.png" alt="Photo 2" class="clients-gallery__img"></figure>
+                    <figure class="clients-gallery__item"><img src="img/Apple-logo.png" alt="Photo 3" class="clients-gallery__img"></figure>
+                    <figure class="clients-gallery__item"><img src="img/ASUS_Logo.png" alt="Photo 4" class="clients-gallery__img"></figure>
+                </div>
+            </div>
+            <div class="btn-wrapper">
+                <a href="#" class="btn btn--clients">See all client</a>
+            </div>
+        </section>
     </div>
 </body>
 </html>
