The Team Section

--- a/index.html
+++ b/index.html
@@ -134,6 +134,61 @@
                 <a href="#" class="btn btn--clients">See all client</a>
             </div>
         </section>
+        <section class="team">
+            <h2 class="heading-secondary">
+                <span class="heading-secondary--main heading-secondary--green">Meet the team</span>
+                <span class="heading-secondary--sub heading-secondary--green mb-lg">Lorem ipsum dolor sit amet. Proin gravida nibh vel velit auctor aliquet.</span>
+            </h2>
+            <div class="team__wrapper">
+                <ul class="team__list">
+                    <li class="team__item">
+                        <img src="img/team-1.png" alt="Photo of worker one" class="team__photo">
+                        <span class="team__name">Krisna Wijaya</span>
+                        <div class="team__icons">
+                            <a href="#" class="team__link"><img src="img/Form-1.png" alt="Link to portfolio" class="team__icon"></a>
+                            <a href="#" class="team__link"><img src="img/behance.png" alt="Link to portfolio" class="team__icon"></a>
+                            <a href="#" class="team__link"><img src="img/twi.png" alt="Link to portfolio" class="team__icon"></a>       
+                        </div>
+                    </li>
+                    <li class="team__item">
+                        <img src="img/team-2.png" alt="Photo of worker one" class="team__photo">
+                        <span class="team__name">Gabriel Yoshua</span>
+                        <div class="team__icons">
+                            <a href="#" class="team__link"><img src="img/Form-1.png" alt="Link to portfolio" class="team__icon"></a>
+                            <a href="#" class="team__link"><img src="img/behance.png" alt="Link to portfolio" class="team__icon"></a>
+                            <a href="#" class="team__link"><img src="img/twi.png" alt="Link to portfolio" class="team__icon"></a>       
+                        </div>
+                    </li>
+                    <li class="team__item">
+                        <img src="img/team-3.png" alt="Photo of worker one" class="team__photo">
+                        <span class="team__name">Adik N.K.L.</span>
+                        <div class="team__icons">
+                            <a href="#" class="team__link"><img src="img/Form-1.png" alt="Link to portfolio" class="team__icon"></a>
+                            <a href="#" class="team__link"><img src="img/behance.png" alt="Link to portfolio" class="team__icon"></a>
+                            <a href="#" class="team__link"><img src="img/twi.png" alt="Link to portfolio" class="team__icon"></a>       
+                        </div>
+                    </li>
+                    <li class="team__item">
+                        <img src="img/team-4.png" alt="Photo of worker one" class="team__photo">
+                        <span class="team__name">Zan D.J</span>
+                        <div class="team__icons">
+                            <a href="#" class="team__link"><img src="img/Form-1.png" alt="Link to portfolio" class="team__icon"></a>
+                            <a href="#" class="team__link"><img src="img/behance.png" alt="Link to portfolio" class="team__icon"></a>
+                            <a href="#" class="team__link"><img src="img/twi.png" alt="Link to portfolio" class="team__icon"></a>       
+                        </div>
+                    </li>
+                    <li class="team__item">
+                        <img src="img/team-5.png" alt="Photo of worker one" class="team__photo">
+                        <span class="team__name">Faizal Febri</span>
+                        <div class="team__icons">
+                            <a href="#" class="team__link"><img src="img/Form-1.png" alt="Link to portfolio" class="team__icon"></a>
+                            <a href="#" class="team__link"><img src="img/behance.png" alt="Link to portfolio" class="team__icon"></a>
+                            <a href="#" class="team__link"><img src="img/twi.png" alt="Link to portfolio" class="team__icon"></a>       
+                        </div>
+                    </li>
+                </ul>
+            </div>               
+        </section>
     </div>
 </body>
 </html>
