Gallery hover effects

--- a/index.html
+++ b/index.html
@@ -97,16 +97,66 @@
             </div> 
             <div class="gallery mb-md">
                 <div class="gallery__wrapper">
-                    <figure class="gallery__item"><img src="img/photo-1.jpg" alt="Photo 1" class="gallery__img"></figure>
-                    <figure class="gallery__item"><img src="img/photo-2.jpg" alt="Photo 2" class="gallery__img"></figure>
-                    <figure class="gallery__item"><img src="img/photo-3.jpg" alt="Photo 3" class="gallery__img"></figure>
-                    <figure class="gallery__item"><img src="img/photo-4.jpg" alt="Photo 4" class="gallery__img"></figure>
-                    <figure class="gallery__item"><img src="img/photo-5.jpg" alt="Photo 5" class="gallery__img"></figure>
-                    <figure class="gallery__item"><img src="img/photo-6.jpg" alt="Photo 6" class="gallery__img"></figure>
-                    <figure class="gallery__item"><img src="img/photo-7.jpg" alt="Photo 7" class="gallery__img"></figure>
-                    <figure class="gallery__item"><img src="img/photo-8.jpg" alt="Photo 8" class="gallery__img"></figure>
-                    <figure class="gallery__item"><img src="img/photo-9.jpg" alt="Photo 9" class="gallery__img"></figure>
-                    <figure class="gallery__item"><img src="img/photo-10.jpg" alt="Photo 10" class="gallery__img"></figure>
+                    <figure class="gallery__item">
+                        <div class="gallery__content">
+                                <img src="img/photo-1.jpg" alt="Photo 1" class="gallery__img">
+                                <div class="gallery__view"><a href="#" class="gallery__link">View</a></div>
+                        </div>
+                    </figure>
+                    <figure class="gallery__item">
+                         <div class="gallery__content">
+                            <img src="img/photo-2.jpg" alt="Photo 2" class="gallery__img">
+                            <div class="gallery__view"><a href="#" class="gallery__link">View</a></div>
+                        </div>
+                    </figure>
+                    <figure class="gallery__item">
+                        <div class="gallery__content">
+                            <img src="img/photo-3.jpg" alt="Photo 3" class="gallery__img">
+                            <div class="gallery__view"><a href="#" class="gallery__link">View</a></div>
+                        </div>
+                    </figure>
+                    <figure class="gallery__item">
+                        <div class="gallery__content">
+                            <img src="img/photo-4.jpg" alt="Photo 4" class="gallery__img">
+                            <div class="gallery__view"><a href="#" class="gallery__link">View</a></div>
+                        </div>
+                    </figure>
+                    <figure class="gallery__item">
+                        <div class="gallery__content">
+                            <img src="img/photo-5.jpg" alt="Photo 5" class="gallery__img">
+                            <div class="gallery__view"><a href="#" class="gallery__link">View</a></div>
+                        </div>
+                    </figure>
+                    <figure class="gallery__item">
+                        <div class="gallery__content">
+                            <img src="img/photo-6.jpg" alt="Photo 6" class="gallery__img">
+                            <div class="gallery__view"><a href="#" class="gallery__link">View</a></div>
+                        </div>
+                    </figure>
+                    <figure class="gallery__item">
+                        <div class="gallery__content">
+                            <img src="img/photo-7.jpg" alt="Photo 7" class="gallery__img">
+                            <div class="gallery__view"><a href="#" class="gallery__link">View</a></div>
+                        </div>
+                    </figure>
+                    <figure class="gallery__item">
+                        <div class="gallery__content">
+                            <img src="img/photo-8.jpg" alt="Photo 8" class="gallery__img">
+                            <div class="gallery__view"><a href="#" class="gallery__link">View</a></div>
+                        </div>
+                    </figure>
+                    <figure class="gallery__item">
+                        <div class="gallery__content">
+                            <img src="img/photo-9.jpg" alt="Photo 9" class="gallery__img">
+                            <div class="gallery__view"><a href="#" class="gallery__link">View</a></div>
+                        </div>
+                    </figure>
+                    <figure class="gallery__item">
+                        <div class="gallery__content">
+                            <img src="img/photo-10.jpg" alt="Photo 10" class="gallery__img">
+                            <div class="gallery__view"><a href="#" class="gallery__link">View</a></div>
+                        </div>
+                    </figure>
                 </div>
             </div>
             <div class="btn-wrapper">
@@ -120,7 +170,10 @@
             </h2>
             <div class="clients-gallery mb-lg">
                 <div class="clients-gallery__wrapper">
-                    <figure class="clients-gallery__item"><img src="img/Googlelogo.png" alt="Photo 1" class="clients-gallery__img"></figure>
+                    <figure class="clients-gallery__item">
+                        <img src="img/Googlelogo.png" alt="Photo 1" class="clients-gallery__img">
+                        <div class="clients-gallery__content"><a href="#" class="clients-gallery__link">View</a></div>
+                    </figure>
                     <figure class="clients-gallery__item"><img src="img/Yahoo_Logo.png" alt="Photo 2" class="clients-gallery__img"></figure>
                     <figure class="clients-gallery__item"><img src="img/MSFT_logo.png" alt="Photo 3" class="clients-gallery__img"></figure>
                     <figure class="clients-gallery__item"><img src="img/Intel-logo.png" alt="Photo 4" class="clients-gallery__img"></figure>
