--- a/index.html
+++ b/index.html
@@ -170,10 +170,7 @@
             </h2>
             <div class="clients-gallery mb-lg">
                 <div class="clients-gallery__wrapper">
-                    <figure class="clients-gallery__item">
-                        <img src="img/Googlelogo.png" alt="Photo 1" class="clients-gallery__img">
-                        <div class="clients-gallery__content"><a href="#" class="clients-gallery__link">View</a></div>
-                    </figure>
+                    <figure class="clients-gallery__item"><img src="img/Googlelogo.png" alt="Photo 1" class="clients-gallery__img"></figure>
                     <figure class="clients-gallery__item"><img src="img/Yahoo_Logo.png" alt="Photo 2" class="clients-gallery__img"></figure>
                     <figure class="clients-gallery__item"><img src="img/MSFT_logo.png" alt="Photo 3" class="clients-gallery__img"></figure>
                     <figure class="clients-gallery__item"><img src="img/Intel-logo.png" alt="Photo 4" class="clients-gallery__img"></figure>
@@ -242,6 +239,86 @@
                 </ul>
             </div>               
         </section>
+        <footer class="footer">
+            <div class="footer__wrapper">
+                <div class="about-us">
+                    <h2 class="heading-secondary">
+                        <span class="heading-secondary--main mb-sm">About us</span>
+                    </h2>
+                    <p class="about-us__description">
+                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit 
+                        auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit 
+                        consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh
+                            vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. 
+                            Ut aliquam massa nisl quis neque. Suspendisse in orci enim.Aenean 
+                            sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum,
+                            nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.
+                    </p>
+                    <div class="team__icons">
+                        <a href="#" class="team__link"><img src="img/Form-1.png" alt="Link to portfolio" class="team__icon"></a>
+                        <a href="#" class="team__link"><img src="img/facebook.png" alt="Link to portfolio" class="team__icon"></a>
+                        <a href="#" class="team__link"><img src="img/twi.png" alt="Link to portfolio" class="team__icon"></a>       
+                    </div>
+                </div>
+                <div class="posts">
+                    <h2 class="heading-secondary">
+                        <span class="heading-secondary--main mb-sm">Recent posts</span>
+                    </h2>
+                    <div class="posts__content">
+                        <img src="img/photo-6.jpg" alt="" class="posts__img">
+                        <span class="posts__heading">Lorem ipsum dolor sit amet</span>
+                        <span class="posts__heading post__heading--desc">Magazine</span>
+                    </div>
+                    <div class="posts__content">
+                        <img src="img/photo-7.jpg" alt="" class="posts__img">
+                        <span class="posts__heading">Lorem ipsum dolor sit amet</span>
+                        <span class="posts__heading post__heading--desc">UI design</span>
+                    </div>
+                    <div class="posts__content">
+                        <img src="img/photo-8.jpg" alt="" class="posts__img">
+                        <span class="posts__heading">Lorem ipsum dolor sit amet</span>
+                        <span class="posts__heading post__heading--desc">Photography</span>
+                    </div>
+                    <div class="posts__content">
+                        <img src="img/photo-10.jpg" alt="" class="posts__img">
+                        <span class="posts__heading">Lorem ipsum dolor sit amet</span>
+                        <span class="posts__heading post__heading--desc">Book</span>
+                    </div>
+                    <div class="posts__content">
+                        <img src="img/photo-9.jpg" alt="" class="posts__img">
+                        <span class="posts__heading">Lorem ipsum dolor sit amet</span>
+                        <span class="posts__heading post__heading--desc">UI design</span>
+                    </div>
+                </div>
+                <div class="contact">
+                    <h2 class="heading-secondary">
+                        <span class="heading-secondary--main mb-sm">Contact us</span>
+                    </h2>
+                    <p class="contact__address">
+                        10044 West 23th Street, Suite 721
+                        New York NY 10010
+                        Email: Username@email.com
+                        Phone: +1 (0) 123 4567 890
+                        Fax: +1 (0) 321 4567 890
+                    </p>
+                    <form action="#" class="form">
+                        <div class="form__group">
+                            <input type="text" class="form__input" id="name" placeholder="Your Name..." required>
+                            <label for="name" class="visually-hidden">Full name</label>
+                        </div>
+                        <div class="form__group">
+                            <input type="email" class="form__input" id="email" placeholder="Your email..." required>
+                            <label for="email" class="visually-hidden">Your email</label>
+                        </div>
+                        <div class="form__group">
+                            <label for="form-text" class="visually-hidden">Текст письма:</label>
+                            <textarea id="form-text" rows="5" placeholder="Your Message..."></textarea>
+                        </div>
+                        <button class="sent" type="submit">Send</button>
+                    </form>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
