--- a/index.html
+++ b/index.html
@@ -192,48 +192,48 @@
             <div class="team__wrapper">
                 <ul class="team__list">
                     <li class="team__item">
-                        <img src="img/team-1.png" alt="Photo of worker one" class="team__photo">
+                        <div class="team__photo-wrapper"><img src="img/team-1.png" alt="Photo of worker one" class="team__photo"></div>
                         <span class="team__name">Krisna Wijaya</span>
-                        <div class="team__icons">
+                        <div class="icon">
                             <a href="#" class="team__link"><img src="img/Form-1.png" alt="Link to portfolio" class="team__icon"></a>
                             <a href="#" class="team__link"><img src="img/behance.png" alt="Link to portfolio" class="team__icon"></a>
                             <a href="#" class="team__link"><img src="img/twi.png" alt="Link to portfolio" class="team__icon"></a>       
                         </div>
                     </li>
                     <li class="team__item">
-                        <img src="img/team-2.png" alt="Photo of worker one" class="team__photo">
+                        <div class="team__photo-wrapper"><img src="img/team-2.png" alt="Photo of worker one" class="team__photo"></div>
                         <span class="team__name">Gabriel Yoshua</span>
-                        <div class="team__icons">
-                            <a href="#" class="team__link"><img src="img/Form-1.png" alt="Link to portfolio" class="team__icon"></a>
-                            <a href="#" class="team__link"><img src="img/behance.png" alt="Link to portfolio" class="team__icon"></a>
-                            <a href="#" class="team__link"><img src="img/twi.png" alt="Link to portfolio" class="team__icon"></a>       
+                        <div class="icon">
+                            <a href="#" class="icon__link"><img src="img/Form-1.png" alt="Link to portfolio" class="icon__icon"></a>
+                            <a href="#" class="icon__link"><img src="img/behance.png" alt="Link to portfolio" class="icon__icon"></a>
+                            <a href="#" class="icon__link"><img src="img/twi.png" alt="Link to portfolio" class="icon__icon"></a>       
                         </div>
                     </li>
                     <li class="team__item">
-                        <img src="img/team-3.png" alt="Photo of worker one" class="team__photo">
+                        <div class="team__photo-wrapper"><img src="img/team-3.png" alt="Photo of worker one" class="team__photo"></div>
                         <span class="team__name">Adik N.K.L.</span>
-                        <div class="team__icons">
-                            <a href="#" class="team__link"><img src="img/Form-1.png" alt="Link to portfolio" class="team__icon"></a>
-                            <a href="#" class="team__link"><img src="img/behance.png" alt="Link to portfolio" class="team__icon"></a>
-                            <a href="#" class="team__link"><img src="img/twi.png" alt="Link to portfolio" class="team__icon"></a>       
+                        <div class="icon">
+                            <a href="#" class="icon__link"><img src="img/Form-1.png" alt="Link to portfolio" class="icon__icon"></a>
+                            <a href="#" class="icon__link"><img src="img/behance.png" alt="Link to portfolio" class="icon__icon"></a>
+                            <a href="#" class="icon__link"><img src="img/twi.png" alt="Link to portfolio" class="icon__icon"></a>       
                         </div>
                     </li>
                     <li class="team__item">
-                        <img src="img/team-4.png" alt="Photo of worker one" class="team__photo">
+                        <div class="team__photo-wrapper"><img src="img/team-4.png" alt="Photo of worker one" class="team__photo"></div>
                         <span class="team__name">Zan D.J</span>
-                        <div class="team__icons">
-                            <a href="#" class="team__link"><img src="img/Form-1.png" alt="Link to portfolio" class="team__icon"></a>
-                            <a href="#" class="team__link"><img src="img/behance.png" alt="Link to portfolio" class="team__icon"></a>
-                            <a href="#" class="team__link"><img src="img/twi.png" alt="Link to portfolio" class="team__icon"></a>       
+                        <div class="icon">
+                            <a href="#" class="icon__link"><img src="img/Form-1.png" alt="Link to portfolio" class="icon__icon"></a>
+                            <a href="#" class="icon__link"><img src="img/behance.png" alt="Link to portfolio" class="icon__icon"></a>
+                            <a href="#" class="icon__link"><img src="img/twi.png" alt="Link to portfolio" class="icon__icon"></a>       
                         </div>
                     </li>
                     <li class="team__item">
-                        <img src="img/team-5.png" alt="Photo of worker one" class="team__photo">
+                        <div class="team__photo-wrapper"><img src="img/team-5.png" alt="Photo of worker one" class="team__photo"></div>
                         <span class="team__name">Faizal Febri</span>
-                        <div class="team__icons">
-                            <a href="#" class="team__link"><img src="img/Form-1.png" alt="Link to portfolio" class="team__icon"></a>
-                            <a href="#" class="team__link"><img src="img/behance.png" alt="Link to portfolio" class="team__icon"></a>
-                            <a href="#" class="team__link"><img src="img/twi.png" alt="Link to portfolio" class="team__icon"></a>       
+                        <div class="icon">
+                            <a href="#" class="icon__link"><img src="img/Form-1.png" alt="Link to portfolio" class="icon__icon"></a>
+                            <a href="#" class="icon__link"><img src="img/behance.png" alt="Link to portfolio" class="icon__icon"></a>
+                            <a href="#" class="icon__link"><img src="img/twi.png" alt="Link to portfolio" class="icon__icon"></a>       
                         </div>
                     </li>
                 </ul>
@@ -243,7 +243,7 @@
             <div class="footer__wrapper">
                 <div class="about-us">
                     <h2 class="heading-secondary">
-                        <span class="heading-secondary--main mb-sm">About us</span>
+                        <span class="heading-secondary--main">About us</span>
                     </h2>
                     <p class="about-us__description">
                         This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit 
@@ -254,45 +254,57 @@
                             sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum,
                             nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.
                     </p>
-                    <div class="team__icons">
-                        <a href="#" class="team__link"><img src="img/Form-1.png" alt="Link to portfolio" class="team__icon"></a>
-                        <a href="#" class="team__link"><img src="img/facebook.png" alt="Link to portfolio" class="team__icon"></a>
-                        <a href="#" class="team__link"><img src="img/twi.png" alt="Link to portfolio" class="team__icon"></a>       
+                    <div class="icon">
+                        <a href="#" class="icon__link"><img src="img/Form-1.png" alt="Link to portfolio" class="icon__icon"></a>
+                        <a href="#" class="icon__link"><img src="img/facebook.png" alt="Link to portfolio" class="icon__icon"></a>
+                        <a href="#" class="icon__link"><img src="img/twi.png" alt="Link to portfolio" class="icon__icon"></a>       
                     </div>
                 </div>
                 <div class="posts">
                     <h2 class="heading-secondary">
-                        <span class="heading-secondary--main mb-sm">Recent posts</span>
+                        <span class="heading-secondary--main">Recent posts</span>
                     </h2>
-                    <div class="posts__content">
-                        <img src="img/photo-6.jpg" alt="" class="posts__img">
-                        <span class="posts__heading">Lorem ipsum dolor sit amet</span>
-                        <span class="posts__heading post__heading--desc">Magazine</span>
-                    </div>
-                    <div class="posts__content">
-                        <img src="img/photo-7.jpg" alt="" class="posts__img">
-                        <span class="posts__heading">Lorem ipsum dolor sit amet</span>
-                        <span class="posts__heading post__heading--desc">UI design</span>
-                    </div>
-                    <div class="posts__content">
-                        <img src="img/photo-8.jpg" alt="" class="posts__img">
-                        <span class="posts__heading">Lorem ipsum dolor sit amet</span>
-                        <span class="posts__heading post__heading--desc">Photography</span>
-                    </div>
-                    <div class="posts__content">
-                        <img src="img/photo-10.jpg" alt="" class="posts__img">
-                        <span class="posts__heading">Lorem ipsum dolor sit amet</span>
-                        <span class="posts__heading post__heading--desc">Book</span>
-                    </div>
-                    <div class="posts__content">
-                        <img src="img/photo-9.jpg" alt="" class="posts__img">
-                        <span class="posts__heading">Lorem ipsum dolor sit amet</span>
-                        <span class="posts__heading post__heading--desc">UI design</span>
+                    <div class="posts__wrapper">
+                        <div class="posts__content">
+                            <a href="#"><img src="img/photo-6.jpg" alt="" class="posts__img"></a>
+                            <div class="posts__heading-wrapper">
+                                <a href="#"><span class="posts__heading">Lorem ipsum dolor sit amet</span></a>
+                                <a href="#" class="posts__link posts__link--green"><span class="posts__heading posts__heading--desc">Magazine</span></a>
+                            </div>
+                        </div>
+                        <div class="posts__content">
+                            <a href="#"><img src="img/photo-7.jpg" alt="" class="posts__img"></a>
+                            <div class="posts__heading-wrapper">
+                                <a href="#"><span class="posts__heading">Lorem ipsum dolor sit amet</span></a>
+                                <a href="#" class="posts__link posts__link--orange"><span class="posts__heading posts__heading--desc">UI design</span></a>
+                            </div>
+                        </div>
+                        <div class="posts__content">
+                            <a href="#"><img src="img/photo-8.jpg" alt="" class="posts__img"></a>
+                            <div class="posts__heading-wrapper">
+                                <a href="#"><span class="posts__heading">Lorem ipsum dolor sit amet</span></a>
+                                <a href="#" class="posts__link posts__link--blue"><span class="posts__heading posts__heading--desc">Photography</span></a>
+                            </div>
+                        </div>
+                        <div class="posts__content">
+                            <a href="#"><img src="img/photo-10.jpg" alt="" class="posts__img"></a>
+                            <div class="posts__heading-wrapper">
+                                <a href="#"><span class="posts__heading">Lorem ipsum dolor sit amet</span></a>
+                                <a href="#" class="posts__link posts__link--red"><span class="posts__heading posts__heading--desc">Book</span></a>
+                            </div>
+                        </div>
+                        <div class="posts__content">
+                            <a href="#"><img src="img/photo-9.jpg" alt="" class="posts__img"></a>
+                            <div class="posts__heading-wrapper">
+                                <a href="#"><span class="posts__heading">Lorem ipsum dolor sit amet</span></a>
+                                <a href="#" class="posts__link posts__link--orange"><span class="posts__heading posts__heading--desc">UI design</span></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="contact">
                     <h2 class="heading-secondary">
-                        <span class="heading-secondary--main mb-sm">Contact us</span>
+                        <span class="heading-secondary--main">Contact us</span>
                     </h2>
                     <p class="contact__address">
                         10044 West 23th Street, Suite 721
@@ -312,9 +324,9 @@
                         </div>
                         <div class="form__group">
                             <label for="form-text" class="visually-hidden">Текст письма:</label>
-                            <textarea id="form-text" rows="5" placeholder="Your Message..."></textarea>
+                            <textarea id="form__input" class="form__input" rows="5" placeholder="Your Message..."></textarea>
                         </div>
-                        <button class="sent" type="submit">Send</button>
+                        <button class="form__sent" type="submit">Send</button>
                     </form>
                 </div>
             </div>
